# mpc

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: clear_ekf_params.sh  controller_config.yaml  ekf.yaml  gps_config.yaml  tunable_params.yaml
include/: KeyboardController.hpp  constants.h  optimizer.hpp  utility.hpp
include/utils/: Telemetry.h
launch/: bridge.launch  clean.launch  controller.launch  controller18.launch  controller25.launch  ekf.launch  run_lane.launch  ukf.launch
scripts/: MPC.py  car_locations.py  control3.py  control_node.py  control_node2.py  draw.py  draw2.py  global_planner.py  global_planner2.py  global_planner2_new.py  imu_checker.py  imu_sub.py  input_refs.txt  kappa.txt  kf.py  kf3.py  localization_plot.py  memory.py  mhe_acados copy.py  mhe_acados.py  mobile_robot_18_acados_ocp.json  mobile_robot_25_acados_ocp.json  mobile_robot_50_acados_ocp.json  mobile_robot_acados_ocp.json  mpc.py  mpc_acados.py  mpc_acados2.py  mpc_acados3.py  mpc_acados_park.py  mpc_acados_park2.py  mpc_park.py  mpc_turn.py  mpc_u_c.npy  mpc_waypoints.py  mpc_waypoints3.py  odomPub.py  park_acados_ocp.json  path.py  path2.py  path2copy.py  (+14 more)
scripts/c_generated_code/: Makefile  acados_sim_solver_mobile_robot.c  acados_sim_solver_mobile_robot.h  acados_sim_solver_mobile_robot_25.c  acados_sim_solver_mobile_robot_25.h  acados_sim_solver_mobile_robot_50.c  acados_sim_solver_mobile_robot_50.h  acados_sim_solver_park.c  acados_sim_solver_park.h  acados_sim_solver_scandy.c  acados_sim_solver_scandy.h  acados_solver.pxd  acados_solver_mobile_robot.c  acados_solver_mobile_robot.h  acados_solver_mobile_robot_25.c  acados_solver_mobile_robot_50.c  acados_solver_mobile_robot_50.h  acados_solver_park.c  acados_solver_park.h  acados_solver_scandy.c  acados_solver_scandy.h  main_mobile_robot.c  main_mobile_robot_18.c  main_mobile_robot_50.c  main_park.c  main_scandy.c  main_sim_mobile_robot_50.c  main_sim_park.c  main_sim_scandy.c
scripts/c_generated_code/mobile_robot_18_constraints/: mobile_robot_18_constraints.h
scripts/c_generated_code/mobile_robot_18_cost/: mobile_robot_18_cost.h
scripts/c_generated_code/mobile_robot_18_model/: mobile_robot_18_expl_ode_fun.c  mobile_robot_18_expl_vde_adj.c  mobile_robot_18_expl_vde_forw.c  mobile_robot_18_model.h
scripts/config/: mpc_config.yaml  mpc_config18.yaml  mpc_config2.json  mpc_config2.yaml  mpc_config25.yaml  mpc_config50.yaml  mpc_config_park.yaml  paths.yaml
scripts/maps/: Competition_track_graph_mod.graphml  Competition_track_graph_modified.graphml  Competition_track_graph_modified_new.graphml  Competition_track_graph_new.graphml  modify_graph.py  modify_graph_new.py
scripts/osqp/: MPC.py  graph.py  modify_graph.py  reference_path.py  s.py  simulation.py  spatial_bicycle_models.py  utility.py
scripts/osqp/waypoints/: parallel_park.npy
scripts/paths/: input_refs.txt  input_refs18.txt  input_refs2.txt  input_refs25.txt  input_refs50.txt  input_refs_path118.txt  input_refs_path125.txt  input_refs_path150.txt  input_refs_path350.txt  input_refs_speedrun50.txt  kappa.txt  kappa2.txt  kappa_cw.txt  kappa_hw.txt  left_turn_inputs25.txt  left_turn_inputs50.txt  left_turn_states18.txt  left_turn_states50.txt  right_turn_inputs25.txt  right_turn_inputs50.txt  right_turn_states25.txt  right_turn_states50.txt  state_refs.txt  state_refs18.txt  state_refs2.txt  state_refs25.txt  state_refs50.txt  state_refs_cw.txt  state_refs_hw.txt  state_refs_path118.txt  state_refs_path125.txt  state_refs_path150.txt  state_refs_path350.txt  state_refs_speedrun50.txt  straight_inputs25.txt  straight_inputs50.txt  straight_states18.txt  straight_states50.txt  waypoints_x.txt  waypoints_y.txt  (+21 more)
scripts/trash/: combine_imu.py  draw_acados.py  kf2.py  kf4.py  log.txt  mpc_acados0.py  mpc_acados2.py  mpc_acados3.py  mpc_acados_old.py  mpc_park.py  mpc_waypoints2.py  pure_pursuit.py  test_transform.py
scripts/waypoints/: speedrun1.npy  speedrun3.npy  speedrun4.npy
src/: CMakeLists.txt  MPC.cpp  bridge.cpp  controller.cpp  main_ros.cpp  mpc_node.cpp  optimizer copy 2.cpp  optimizer copy.cpp  optimizer.cpp  optimizer_main.cpp  path_planner.cpp  simU.txt  simX.txt  state_refs.txt  stats.txt  time_record.txt  utility.cpp  utility2.cpp  utility_main.cpp  waypoints.txt  waypoints_x.npy  waypoints_y.npy
src/c_generated_code/: Makefile  acados_sim_solver_mobile_robot.c  acados_solver copy.pxd  acados_solver_mobile_robot.c  acados_solver_mobile_robot.h  acados_solver_park.c  main_park.c
src/c_generated_code/mobile_robot_model/: mobile_robot_expl_vde_adj.c
src/c_generated_code/park_constraints/: park_constraints.h
src/c_generated_code_18/: Makefile  acados_sim_solver_mobile_robot_18.c  acados_sim_solver_mobile_robot_18.h  acados_solver_mobile_robot_18.c  acados_solver_mobile_robot_18.h  main_mobile_robot_18.c  main_sim_mobile_robot_18.c
src/c_generated_code_18/mobile_robot_18_model/: mobile_robot_18_expl_ode_fun.c  mobile_robot_18_expl_vde_adj.c  mobile_robot_18_expl_vde_forw.c
src/c_generated_code_25/: Makefile  acados_solver.pxd  acados_solver_mobile_robot_25.h  main_mobile_robot_25.c  main_sim_mobile_robot_25.c
src/c_generated_code_25/mobile_robot_25_constraints/: mobile_robot_25_constraints.h
src/c_generated_code_25/mobile_robot_25_cost/: mobile_robot_25_cost.h
src/c_generated_code_25/mobile_robot_25_model/: mobile_robot_25_expl_ode_fun.c  mobile_robot_25_expl_vde_forw.c  mobile_robot_25_model.h
src/c_generated_code_50/: acados_solver.pxd  acados_solver_mobile_robot_50.c  acados_solver_mobile_robot_50.h  main_sim_mobile_robot_50.c
src/c_generated_code_50/mobile_robot_50_model/: mobile_robot_50_expl_ode_fun.c  mobile_robot_50_expl_vde_forw.c
src/c_generated_code_park/: acados_sim_solver_park.c  acados_solver_park.h
src/c_generated_code_park/park_model/: park_expl_vde_adj.c
src/c_generated_codeb/: acados_solver_mobile_robot.c  acados_solver_mobile_robot.h
src/c_generated_codeb/mobile_robot_model/: mobile_robot_expl_ode_fun.c  mobile_robot_expl_vde_forw.c
src/results/: simU.txt  simX.txt  state_refs.txt  stats.txt
(+29 files in other folders)
